--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
   k8s_web:
-    image: aws_k8s
+    image: docker_flask
     command: ["run"]
-    working_dir: /code/k8s
+    working_dir: /code/flask
     ports:
       - "5000:5000" 
